--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,21 @@ body {
   background-color: aquamarine;
 }
 
+#app-container {
+}
+
+
+.nav-bar {
+background-color: #5C8891;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-wrap: wrap;
+}
+
+.nav-bar h1 {
+  flex: 200;
+}
 form {
   border: 1px solid black;
   background-color: gray;
