--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 body {
   margin: 0 auto;
   background-color: aquamarine;
+  width: 90%;
 }
 
 #app-container {
 }
 
-
 .nav-bar {
-background-color: #5C8891;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-wrap: wrap;
+  background-color: #5c8891;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .nav-bar h1 {
@@ -22,7 +22,7 @@ form {
   border: 1px solid black;
   background-color: gray;
   width: 80%;
-  height:auto;
+  height: auto;
 }
 
 input.notes-body {
